Converted project to use Maven.

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,4 @@
+trunk/globalmentor-android/.settings
 trunk/globalmentor-android/bin
 trunk/globalmentor-android/gen
+trunk/globalmentor-android/target
