--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
+trunk/globalmentor-android/.project
 trunk/globalmentor-android/.settings
 trunk/globalmentor-android/bin
 trunk/globalmentor-android/gen
