--- a/trunk/globalmentor-android/pom.xml
+++ b/trunk/globalmentor-android/pom.xml
@@ -26,10 +26,6 @@
 			<groupId>com.globalmentor</groupId>
 			<artifactId>globalmentor-core</artifactId>
 			<version>1.0-SNAPSHOT</version>
-			<!-- android-maven-plugin can't seem to automatically keep this from being 
-				included twice; it must therefore be included manually (either explicitly 
-				or transitively) in dependent projects -->
-			<scope>provided</scope>
 		</dependency>
 	</dependencies>
 
@@ -50,7 +46,7 @@
 				<plugin>
 					<groupId>com.jayway.maven.plugins.android.generation2</groupId>
 					<artifactId>android-maven-plugin</artifactId>
-					<version>3.0.0-alpha-14</version>
+					<version>3.5.1</version>
 					<extensions>true</extensions>
 				</plugin>
 			</plugins>
