PORTROL-13: Improved Android library directory layout and added currently non-functioning Uri test.

--- a/trunk/globalmentor-android/.classpath
+++ b/trunk/globalmentor-android/.classpath
@@ -7,7 +7,12 @@
 			<attribute name="optional" value="true"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="src" output="bin/classes" path="src">
+	<classpathentry kind="src" output="bin/classes" path="src/main/java">
+		<attributes>
+			<attribute name="maven.pomderived" value="true"/>
+		</attributes>
+	</classpathentry>
+	<classpathentry kind="src" output="bin/classes" path="src/test/java">
 		<attributes>
 			<attribute name="maven.pomderived" value="true"/>
 		</attributes>
